--- a/style.css
+++ b/style.css
@@ -92,3 +92,11 @@ button {
         font-size: 20px;
     }
 }
+
+.small-white-text {
+    font-size: 15px;
+    color: white;
+    display: block;
+    margin-top: 5px;
+}
+
